# qruler

./: CMakeLists.txt
resources/translations/: qruler_it.desktop.yaml  qruler_it.ts
src/: dialogprefs.ui
